# robot-gitee-lgtm

./: BUILD.bazel  client.go  config.go  go.mod  go.sum  main.go  notification.go  robot.go  strict_review.go  transform.go
lgtm/: export.go  lgtm.go  response.go
